{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 434,
  "lineage": "739175c6-7517-2655-3b0c-72f8868bdc73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d3da3e56e6ab65",
            "association_id": "eipassoc-01450f138c261cb72",
            "domain": "vpc",
            "id": "eipalloc-014d3da3e56e6ab65",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0636a47c144be33b6",
            "private_dns": "ip-10-0-1-226.ec2.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-34-204-128-86.compute-1.amazonaws.com",
            "public_ip": "34.204.128.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "private-nat-gateway-0-eip"
            },
            "tags_all": {
              "Name": "private-nat-gateway-0-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0715f64e33eb3506c",
            "association_id": "eipassoc-0f53a6b7e782a1776",
            "domain": "vpc",
            "id": "eipalloc-0715f64e33eb3506c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06fe65f288b2244ae",
            "private_dns": "ip-10-0-2-76.ec2.internal",
            "private_ip": "10.0.2.76",
            "public_dns": "ec2-34-205-91-205.compute-1.amazonaws.com",
            "public_ip": "34.205.91.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "private-nat-gateway-1-eip"
            },
            "tags_all": {
              "Name": "private-nat-gateway-1-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:internet-gateway/igw-0c3b3b8080aeb0dbb",
            "id": "igw-0c3b3b8080aeb0dbb",
            "owner_id": "347720131589",
            "tags": {
              "Name": "terraform_igw"
            },
            "tags_all": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_webtier_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:347720131589:loadbalancer/app/public-webtier-loadbalancer/2fe2092b60f6f7e0",
            "arn_suffix": "app/public-webtier-loadbalancer/2fe2092b60f6f7e0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-webtier-loadbalancer-1021286416.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:347720131589:loadbalancer/app/public-webtier-loadbalancer/2fe2092b60f6f7e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-webtier-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09357751f5ebd087f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02dd9b2ca8d4b8c33"
              },
              {
                "subnet_id": "subnet-0ad4b147aa408f498"
              }
            ],
            "subnets": [
              "subnet-02dd9b2ca8d4b8c33",
              "subnet-0ad4b147aa408f498"
            ],
            "tags": {
              "Name": "public_webtier_loadbalancer"
            },
            "tags_all": {
              "Name": "public_webtier_loadbalancer"
            },
            "vpc_id": "vpc-050951f2b824c4f8b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:347720131589:listener/app/public-webtier-loadbalancer/2fe2092b60f6f7e0/aada911e3bc2473b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:347720131589:targetgroup/web/fa953ad380c93e0f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:347720131589:listener/app/public-webtier-loadbalancer/2fe2092b60f6f7e0/aada911e3bc2473b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:347720131589:loadbalancer/app/public-webtier-loadbalancer/2fe2092b60f6f7e0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_webtier_loadbalancer",
            "aws_lb_target_group.web",
            "aws_security_group.lb_sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:347720131589:targetgroup/web/fa953ad380c93e0f",
            "arn_suffix": "targetgroup/web/fa953ad380c93e0f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:347720131589:targetgroup/web/fa953ad380c93e0f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014d3da3e56e6ab65",
            "association_id": "eipassoc-01450f138c261cb72",
            "connectivity_type": "public",
            "id": "nat-0139c90dd4bfe57d6",
            "network_interface_id": "eni-0636a47c144be33b6",
            "private_ip": "10.0.1.226",
            "public_ip": "34.204.128.86",
            "subnet_id": "subnet-02dd9b2ca8d4b8c33",
            "tags": {
              "Name": "private-nat-gateway-0"
            },
            "tags_all": {
              "Name": "private-nat-gateway-0"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0715f64e33eb3506c",
            "association_id": "eipassoc-0f53a6b7e782a1776",
            "connectivity_type": "public",
            "id": "nat-09e1a41dc90fc1a4c",
            "network_interface_id": "eni-06fe65f288b2244ae",
            "private_ip": "10.0.2.76",
            "public_ip": "34.205.91.205",
            "subnet_id": "subnet-0ad4b147aa408f498",
            "tags": {
              "Name": "private-nat-gateway-1"
            },
            "tags_all": {
              "Name": "private-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:route-table/rtb-055ccd51ea58fd820",
            "id": "rtb-055ccd51ea58fd820",
            "owner_id": "347720131589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0139c90dd4bfe57d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-route-table-0"
            },
            "tags_all": {
              "Name": "private-subnet-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.private_nat_gateway",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:route-table/rtb-07f7af19bed60971b",
            "id": "rtb-07f7af19bed60971b",
            "owner_id": "347720131589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e1a41dc90fc1a4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-route-table-1"
            },
            "tags_all": {
              "Name": "private-subnet-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.private_nat_gateway",
            "aws_subnet.private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:route-table/rtb-0d8874242ba66e3ed",
            "id": "rtb-0d8874242ba66e3ed",
            "owner_id": "347720131589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3b3b8080aeb0dbb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet-route-table-0"
            },
            "tags_all": {
              "Name": "public-subnet-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:route-table/rtb-0849b2b9b7f501f6e",
            "id": "rtb-0849b2b9b7f501f6e",
            "owner_id": "347720131589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3b3b8080aeb0dbb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet-route-table-1"
            },
            "tags_all": {
              "Name": "public-subnet-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1e7d4d85aea341",
            "route_table_id": "rtb-055ccd51ea58fd820",
            "subnet_id": "subnet-0c6909e8f7e0db2f7"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.private_nat_gateway",
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1638e5edd4adfd3",
            "route_table_id": "rtb-07f7af19bed60971b",
            "subnet_id": "subnet-0c9b2d9cc5370bafe"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.private_nat_gateway",
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5ee8463120466a2",
            "route_table_id": "rtb-055ccd51ea58fd820",
            "subnet_id": "subnet-024aa760599dd38ec"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.private_nat_gateway",
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0317b12c5e21036b3",
            "route_table_id": "rtb-07f7af19bed60971b",
            "subnet_id": "subnet-0ca843b466c852c5f"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_nat_gateway.private_nat_gateway",
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcf11921b14d23b2",
            "route_table_id": "rtb-0d8874242ba66e3ed",
            "subnet_id": "subnet-02dd9b2ca8d4b8c33"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c734a391a3b0194",
            "route_table_id": "rtb-0849b2b9b7f501f6e",
            "subnet_id": "subnet-0ad4b147aa408f498"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:security-group/sg-09357751f5ebd087f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09357751f5ebd087f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg20230604115637482300000001",
            "name_prefix": "lb-sg",
            "owner_id": "347720131589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg"
            },
            "tags_all": {
              "Name": "lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:security-group/sg-0637f2accc023f59b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0637f2accc023f59b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e094e4dd5e90795"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e094e4dd5e90795"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg20230605162848781000000002",
            "name_prefix": "private_sg",
            "owner_id": "347720131589",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.public_sg",
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:security-group/sg-06e094e4dd5e90795",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e094e4dd5e90795",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09357751f5ebd087f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09357751f5ebd087f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg20230604115645029200000002",
            "name_prefix": "public_sg",
            "owner_id": "347720131589",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.terraform_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:security-group/sg-0d77755bf431ea251",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d77755bf431ea251",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0637f2accc023f59b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_private_sg20230605162901712000000004",
            "name_prefix": "rds_private_sg",
            "owner_id": "347720131589",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-0c6909e8f7e0db2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6909e8f7e0db2f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-0c9b2d9cc5370bafe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9b2d9cc5370bafe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-024aa760599dd38ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024aa760599dd38ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-0ca843b466c852c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca843b466c852c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_webtier_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-02dd9b2ca8d4b8c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dd9b2ca8d4b8c33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:subnet/subnet-0ad4b147aa408f498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4b147aa408f498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347720131589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-050951f2b824c4f8b"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347720131589:vpc/vpc-050951f2b824c4f8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e7c2fd26ae15a47",
            "default_route_table_id": "rtb-0242f46aa0a696ad4",
            "default_security_group_id": "sg-0bd0b05e436476de0",
            "dhcp_options_id": "dopt-0ecf4264af48363e6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050951f2b824c4f8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0242f46aa0a696ad4",
            "owner_id": "347720131589",
            "tags": {
              "Name": "Sabaoth_VPC"
            },
            "tags_all": {
              "Name": "Sabaoth_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}